--- a/style.css
+++ b/style.css
@@ -52,15 +52,16 @@
     margin: 120px 0px;
 }
 
-.card {
+.card-feat {
     padding: 35px;
     border-radius: 7px;
     box-shadow: 15px 30px 30px rgba(9, 8, 77,.15); 
     border: none;
     transition: transform .3s;
+    z-index: 10;
 }
 
-.card:hover {
+.card-feat:hover {
     padding: 35px;
     border-radius: 7px;
     box-shadow: 20px 40px 40px rgba(9, 8, 77,.15); 
@@ -122,6 +123,7 @@
   .slider {
     margin-top: 30px;
     padding: 50px 50px;
+    margin-bottom: 50px;
     border-bottom: 1.5px solid #e8e9eb;
   }
   
@@ -129,3 +131,98 @@
     0% {transform: translateX(0);}
     100% {transform: translatex(-1000%)}
   }
+
+/* report-section */
+.report-section {
+    padding: 45px 0px;
+}
+
+.rep-content {
+    padding: 30px 15px;
+}
+
+.container-acc {
+    padding-right: 60px;
+}
+
+.card-acc {
+    border: none;
+    padding-right: 30px;
+    border-bottom: 1px solid #e8e9eb;
+}
+
+.card-acc-header {
+    margin: 20px 0px
+}
+
+.btn-acc {
+    text-decoration: none;
+    color: #000033;
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.card-acc-body {
+ margin: 35px 0px;
+ color: #4b4b56;
+}
+
+#card-acc-text{
+    margin-bottom: 50px !important;
+}
+
+.btn-text {
+    text-decoration: none;
+    color:#0d0b75 !important;
+    font-weight: 500;
+    border-bottom: 1.5px solid #09084d;
+    padding-bottom: 5px;
+}
+
+
+/*card big*/
+
+.card-big {
+    background-color: #000066;
+    color: white;
+    padding: 90px 80px;
+    border-radius: 5px;
+}
+
+.card-col {
+    padding: 15px 0px;
+    margin-right: 50px;
+}
+
+.card-col-text {
+    color: #c2c2e0
+}
+
+.card-col-img {
+    margin: 10px 0px
+}
+
+/* stat-section */
+
+.stat-hero-section {
+    background-image: url(img/stat\ bg.webp);
+    background-size: cover;
+    background-color: #000033;
+    margin: 140px 0px;
+    padding: 120px 300px;
+}
+
+.card-stat {
+    padding: 0px 50px;
+}
+.stat-card-title {
+    color: #00ffff;
+}
+
+.stat-des {
+    color: white;
+    font-size: 20px;
+}
+
+/* testimonial */
+
