--- a/style.css
+++ b/style.css
@@ -7,15 +7,27 @@
 .navbar {
     padding: 10px;
     padding-top: 58px;
+    background-color: transparent;
 }
-
 
 .hero-section {
     color: white;
-    background-color: #09084d;  
-    padding: 130px;
+    /* background-color: #09084d;   */
+    padding: 300px 0px 130px 0px;
     font-weight: 400;
     font-size: 20px;
+    position: relative;
+}
+
+.bg-video-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    object-fit: cover;
+    overflow: hidden;
 }
 
 
@@ -320,4 +332,10 @@
 .footer{
    font-size: 14px; 
    text-decoration: none;
+   background-color: #000033 !important;
+}
+
+.logo-line{
+    margin: 60px 0px;
+    padding-right: 110px;
 }
